edge 등록 과정 추가

--- a/.github/workflows/data-pipeline.yml
+++ b/.github/workflows/data-pipeline.yml
@@ -33,10 +33,54 @@ jobs:
           docker exec postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "CREATE EXTENSION IF NOT EXISTS postgis;"
           docker exec postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "CREATE EXTENSION IF NOT EXISTS hstore;"
           docker exec postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "CREATE EXTENSION IF NOT EXISTS pgrouting;"
-
+          
           echo "▶ Copy map.osm into container"
           docker cp /home/${{ secrets.USERNAME }}/workspace/data/map.osm postgres_db:/map.osm
-
+          
           echo "▶ Run osm2pgsql import"
           docker exec -i postgres_db bash -c \
             "osm2pgsql -d ajou_way -U '${{ secrets.POSTGRESQL_USER }}' -H localhost -P 5432 -C 2000 --hstore --create /map.osm"
+          
+          echo "▶ Drop and create edges table"
+          docker exec -i postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "
+            DROP TABLE IF EXISTS edges CASCADE;
+          
+            CREATE TABLE edges AS
+            SELECT
+              row_number() OVER () AS id,
+              ST_MakeLine(pt1.geom, pt2.geom)::geometry(LineString, 3857) AS geom
+            FROM (
+              SELECT
+                osm_id,
+                (ST_DumpPoints(way)).path[1] AS pt_idx,
+                (ST_DumpPoints(way)).geom AS geom
+              FROM planet_osm_line
+              WHERE way IS NOT NULL
+            ) pt1
+            JOIN (
+              SELECT
+                osm_id,
+                (ST_DumpPoints(way)).path[1] AS pt_idx,
+                (ST_DumpPoints(way)).geom AS geom
+              FROM planet_osm_line
+              WHERE way IS NOT NULL
+            ) pt2
+            ON pt1.osm_id = pt2.osm_id
+            AND pt1.pt_idx = pt2.pt_idx - 1;
+          
+            \\echo '▶ Add source and target columns'
+            ALTER TABLE edges ADD COLUMN source BIGINT;
+            ALTER TABLE edges ADD COLUMN target BIGINT;
+          
+            \\echo '▶ Create topology using pgr_createTopology'
+            SELECT pgr_createTopology('edges', 0.00001, 'geom');
+          
+            \\echo '▶ Add cost columns'
+            ALTER TABLE edges ADD COLUMN cost DOUBLE PRECISION;
+            ALTER TABLE edges ADD COLUMN reverse_cost DOUBLE PRECISION;
+          
+            \\echo '▶ Set cost and reverse_cost'
+            UPDATE edges
+            SET cost = ST_Length(geom),
+                reverse_cost = ST_Length(geom);
+          "
