--- a/.github/workflows/data-pipeline.yml
+++ b/.github/workflows/data-pipeline.yml
@@ -30,8 +30,7 @@ jobs:
         port: 22
         script: |
           echo "▶ Install pgRouting on EC2"
-          sudo apt-get update
-          sudo apt-get install -y postgresql-15-pgrouting
+          docker exec postgres_db bash -c "apt-get update && apt-get install -y postgresql-15-pgrouting"
           
           echo "▶ Create required PostgreSQL extensions"
           docker exec postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "CREATE EXTENSION IF NOT EXISTS postgis;"
@@ -45,11 +44,11 @@ jobs:
           docker exec -i postgres_db bash -c \
             "osm2pgsql -d ajou_way -U '${{ secrets.POSTGRESQL_USER }}' -H localhost -P 5432 -C 2000 --hstore --create /map.osm"
           
-          echo "▶ Drop and create edges table"
+          echo "▶ Drop and create ways table"
           docker exec -i postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "
-          DROP TABLE IF EXISTS edges CASCADE;
+          DROP TABLE IF EXISTS ways CASCADE;
           
-          CREATE TABLE edges AS
+          CREATE TABLE ways AS
           SELECT
             row_number() OVER () AS id,
             ST_MakeLine(pt1.geom, pt2.geom)::geometry(LineString, 3857) AS geom
@@ -75,24 +74,24 @@ jobs:
           
           echo "▶ Add source and target columns"
           docker exec -i postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "
-          ALTER TABLE edges ADD COLUMN source BIGINT;
-          ALTER TABLE edges ADD COLUMN target BIGINT;
+          ALTER TABLE ways ADD COLUMN source BIGINT;
+          ALTER TABLE ways ADD COLUMN target BIGINT;
           "
           
           echo "▶ Create topology using pgr_createTopology"
           docker exec -i postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "
-          SELECT pgr_createTopology('edges', 0.00001, 'geom');
+          SELECT pgr_createTopology('ways', 0.00001, 'geom');
           "
           
           echo "▶ Add cost columns"
           docker exec -i postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "
-          ALTER TABLE edges ADD COLUMN cost DOUBLE PRECISION;
-          ALTER TABLE edges ADD COLUMN reverse_cost DOUBLE PRECISION;
+          ALTER TABLE ways ADD COLUMN cost DOUBLE PRECISION;
+          ALTER TABLE ways ADD COLUMN reverse_cost DOUBLE PRECISION;
           "
           
           echo "▶ Set cost and reverse_cost"
           docker exec -i postgres_db psql -U '${{ secrets.POSTGRESQL_USER }}' -d ajou_way -c "
-          UPDATE edges
+          UPDATE ways
           SET cost = ST_Length(geom),
               reverse_cost = ST_Length(geom);
           "
