데이터 변경 후, 서버 재시작

--- a/.github/workflows/data-pipeline.yml
+++ b/.github/workflows/data-pipeline.yml
@@ -91,3 +91,15 @@ jobs:
           SET cost = ST_Length(geom),
               reverse_cost = ST_Length(geom);
           "
+    - name: Restart all services after osm import (clean state)
+      uses: appleboy/ssh-action@v1
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        port: 22
+        script: |
+          echo "▶ Restarting docker-compose stack"
+          cd /home/${{ secrets.USERNAME }}/workspace
+          docker-compose down
+          docker-compose up -d
